--- a/Loan_Prediction_Research.ipynb
+++ b/Loan_Prediction_Research.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "c8137797",
    "metadata": {},
    "outputs": [
@@ -270,9 +270,6 @@
     }
    ],
    "source": [
-    "# This code assumes you have run the Model Training step and have a trained 'model'\n",
-    "# and the feature set 'X' (without 'loan_status') ready.\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -288,15 +285,12 @@
     "plt.title('Feature Importance from Random Forest Model')\n",
     "plt.xlabel('Feature Importance Score')\n",
     "plt.ylabel('Features')\n",
-    "plt.show()\n",
-    "\n",
-    "# Key Insight: You should expect 'cibil_score' to be the most dominant feature, \n",
-    "# followed by 'income_annum' and 'loan_amount'."
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "690ee5a6",
    "metadata": {},
    "outputs": [
@@ -327,10 +321,7 @@
     "plt.title('CIBIL Score Distribution by Loan Status')\n",
     "plt.xlabel('CIBIL Score')\n",
     "plt.legend(labels=['Approved (1)', 'Rejected (0)'])\n",
-    "plt.show()\n",
-    "\n",
-    "# Key Insight: This plot should visually demonstrate that approved loans (1) \n",
-    "# predominantly have higher CIBIL scores than rejected loans (0)."
+    "plt.show()"
    ]
   },
   {
@@ -767,13 +758,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5ce1e6a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a new feature 'total_assets_value' by summing the four asset columns.\n",
-    "# This single feature can provide a more holistic view of the applicant's assets.\n",
     "df['total_assets_value'] = (\n",
     "    df['residential_assets_value'] + \n",
     "    df['commercial_assets_value'] +\n",
@@ -947,27 +937,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d8e6f25d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Separate features (X) and target variable (y)\n",
-    "# 'loan_status' is our target variable, which is now numerically encoded (0 or 1)\n",
     "X = df.drop('loan_status', axis=1)\n",
     "y = df['loan_status']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "44439290",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into training and testing sets\n",
-    "# We use a 80/20 split and stratify=y to ensure the test set has the same\n",
-    "# proportion of 'Approved' and 'Rejected' loans as the full dataset.\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
